[gd_scene load_steps=16 format=2]

[ext_resource path="res://SongSelector.gd" type="Script" id=1]
[ext_resource path="res://scenes/SongTabContainer.tscn" type="PackedScene" id=2]
[ext_resource path="res://scenes/DifficultyButtons.tscn" type="PackedScene" id=5]
[ext_resource path="res://scripts/ConnectPadInput.gd" type="Script" id=7]
[ext_resource path="res://scripts/TouchableViewport.gd" type="Script" id=8]
[ext_resource path="res://scenes/SongSelectionGUI.tscn" type="PackedScene" id=14]

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 0, 0, 0, 0 )
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color( 0.380392, 0.298039, 0.831373, 1 )
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5

[sub_resource type="BoxShape" id=2]
margin = 0.001
extents = Vector3( 1, 0.033, 1.066 )

[sub_resource type="PlaneMesh" id=3]
size = Vector2( 2, 2.133 )

[sub_resource type="ViewportTexture" id=4]
flags = 12
viewport_path = NodePath("Viewport")

[sub_resource type="SpatialMaterial" id=5]
resource_local_to_scene = true
flags_transparent = true
flags_unshaded = true
params_use_alpha_scissor = true
params_alpha_scissor_threshold = 0.98
albedo_texture = SubResource( 4 )

[sub_resource type="BoxShape" id=6]
extents = Vector3( 1.5, 0.033, 1 )

[sub_resource type="PlaneMesh" id=7]
size = Vector2( 3, 2 )

[sub_resource type="ViewportTexture" id=8]
flags = 12
viewport_path = NodePath("SongSelector/Viewport")

[sub_resource type="SpatialMaterial" id=9]
resource_local_to_scene = true
flags_transparent = true
flags_unshaded = true
params_use_alpha_scissor = true
params_alpha_scissor_threshold = 0.98
albedo_texture = SubResource( 8 )

[node name="Spatial" type="Spatial"]
script = ExtResource( 1 )

[node name="DifficultyButtons" parent="." instance=ExtResource( 5 )]
transform = Transform( -1.91928e-07, 0.3, -1.31134e-08, 0, -1.31134e-08, -0.3, -0.3, -1.91928e-07, 8.38941e-15, -1.70549, -0.129954, 0.923523 )

[node name="Viewport" type="Viewport" parent="."]
size = Vector2( 512, 546 )
transparent_bg = true
msaa = 6
render_target_v_flip = true
render_target_update_mode = 1
script = ExtResource( 8 )

[node name="CanvasLayer" type="CanvasLayer" parent="Viewport"]

[node name="Mark" type="ColorRect" parent="Viewport/CanvasLayer"]
margin_right = 4.0
margin_bottom = 4.0

[node name="TabContainer" parent="Viewport/CanvasLayer" instance=ExtResource( 2 )]
margin_right = 0.0
margin_bottom = 0.0

[node name="Panel" type="Panel" parent="Viewport/CanvasLayer"]
margin_left = 5.0
margin_top = 39.0
margin_right = 507.0
margin_bottom = 541.0
mouse_filter = 2
custom_styles/panel = SubResource( 1 )

[node name="StaticBody" type="StaticBody" parent="."]
transform = Transform( 1, 0, 0, 0, -1.62921e-07, -1, 0, 1, -1.62921e-07, 2.43, -0.441766, 0 )
script = ExtResource( 7 )

[node name="CollisionShape" type="CollisionShape" parent="StaticBody"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.0552993, 0 )
shape = SubResource( 2 )

[node name="MeshInstance" type="MeshInstance" parent="StaticBody"]
mesh = SubResource( 3 )
material/0 = SubResource( 5 )

[node name="tl_marker" type="Spatial" parent="StaticBody"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -1, 0, -1.067 )

[node name="tr_marker" type="Spatial" parent="StaticBody"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 1, 0, -1.067 )

[node name="bl_marker" type="Spatial" parent="StaticBody"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -1, 0, 1.066 )

[node name="SongSelector" type="StaticBody" parent="."]
transform = Transform( 1, 0, 0, 0, -4.37114e-08, -1, 0, 1, -4.37114e-08, -0.126682, -0.514, 0 )
script = ExtResource( 7 )

[node name="Viewport" type="Viewport" parent="SongSelector"]
size = Vector2( 768, 512 )
transparent_bg = true
msaa = 6
render_target_v_flip = true
render_target_update_mode = 1
script = ExtResource( 8 )

[node name="SongSelection" parent="SongSelector/Viewport" instance=ExtResource( 14 )]

[node name="CollisionShape" type="CollisionShape" parent="SongSelector"]
shape = SubResource( 6 )

[node name="MeshInstance" type="MeshInstance" parent="SongSelector"]
mesh = SubResource( 7 )
material/0 = SubResource( 9 )

[node name="tl_marker" type="Spatial" parent="SongSelector"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -1.5, 0, -1 )

[node name="tr_marker" type="Spatial" parent="SongSelector"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 1.5, 0, -1 )

[node name="bl_marker" type="Spatial" parent="SongSelector"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -1.5, 0, 1 )

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]

[connection signal="content_changed" from="." to="Viewport" method="_on_content_changed"]
[connection signal="difficulty_selected" from="DifficultyButtons" to="." method="_on_DifficultyButtons_difficulty_selected"]
[connection signal="activate_youtube" from="Viewport/CanvasLayer/TabContainer" to="." method="_on_ActivateYoutube_pressed"]
[connection signal="content_changed" from="Viewport/CanvasLayer/TabContainer" to="." method="_on_TabContainer_content_changed"]
[connection signal="remove_pressed" from="Viewport/CanvasLayer/TabContainer" to="." method="_on_Remove_pressed"]
[connection signal="start_pressed" from="Viewport/CanvasLayer/TabContainer" to="." method="_on_Start_pressed"]
[connection signal="start_youtube" from="Viewport/CanvasLayer/TabContainer" to="." method="_on_YoutubeButton_pressed"]
[connection signal="interface_release" from="StaticBody" to="Viewport" method="_on_ConnectPadInput_interface_release"]
[connection signal="interface_touch" from="StaticBody" to="Viewport" method="_on_ConnectPadInput_interface_touch"]
[connection signal="interface_release" from="SongSelector" to="SongSelector/Viewport" method="_on_ConnectPadInput_interface_release"]
[connection signal="interface_touch" from="SongSelector" to="SongSelector/Viewport" method="_on_ConnectPadInput_interface_touch"]
[connection signal="add_playlist_song" from="SongSelector/Viewport/SongSelection" to="." method="_on_SongSelection_add_playlist_song"]
[connection signal="freeplay" from="SongSelector/Viewport/SongSelection" to="." method="_on_Freeplay_pressed"]
[connection signal="preview_song" from="SongSelector/Viewport/SongSelection" to="." method="_on_SongSelection_preview_song"]
[connection signal="resting" from="SongSelector/Viewport/SongSelection" to="." method="_on_Resting_pressed"]
